--- a/SDKVideoPlayer/Home.storyboard
+++ b/SDKVideoPlayer/Home.storyboard
@@ -26,23 +26,54 @@
             </objects>
             <point key="canvasLocation" x="-459" y="826"/>
         </scene>
-        <!--Search-->
+        <!--Home-->
         <scene sceneID="nFP-tq-jjo">
             <objects>
-                <viewController id="HM0-3n-Yyb" sceneMemberID="viewController">
+                <viewController id="HM0-3n-Yyb" customClass="MainViewController" customModule="SDKVideoPlayer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="na7-yI-ZR8">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KAD-fE-Qc8">
+                                <rect key="frame" x="0.0" y="59" width="393" height="710"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="blR-Cn-44a">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rSt-y9-8X7">
+                                        <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NQy-PS-eug">
+                                            <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="CGd-TQ-de3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="CGd-TQ-de3" firstAttribute="trailing" secondItem="KAD-fE-Qc8" secondAttribute="trailing" id="88e-Wv-Kvq"/>
+                            <constraint firstItem="CGd-TQ-de3" firstAttribute="bottom" secondItem="KAD-fE-Qc8" secondAttribute="bottom" id="9Uy-x7-kkc"/>
+                            <constraint firstItem="KAD-fE-Qc8" firstAttribute="leading" secondItem="CGd-TQ-de3" secondAttribute="leading" id="Sho-B8-RbO"/>
+                            <constraint firstItem="KAD-fE-Qc8" firstAttribute="top" secondItem="CGd-TQ-de3" secondAttribute="top" id="xea-4k-ezZ"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass.circle.fill" catalog="system" selectedImage="magnifyingglass.circle.fill" id="ymc-of-57i"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="house.circle.fill" catalog="system" selectedImage="house.circle.fill" id="ymc-of-57i"/>
+                    <connections>
+                        <outlet property="collectionView" destination="KAD-fE-Qc8" id="wXF-MH-ZvA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G8T-DH-bct" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-456" y="112"/>
+            <point key="canvasLocation" x="-106.10687022900763" y="156.33802816901408"/>
         </scene>
-        <!--Home-->
+        <!--Search-->
         <scene sceneID="26A-jB-gQ3">
             <objects>
                 <viewController id="k5B-vU-PQ1" customClass="HomeViewController" customModule="SDKVideoPlayer" customModuleProvider="target" sceneMemberID="viewController">
@@ -52,6 +83,7 @@
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="uA9-CE-Zwk">
                                 <rect key="frame" x="0.0" y="50" width="393" height="44"/>
+                                <color key="backgroundColor" red="0.93333333333333335" green="0.93725490196078431" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="G0z-4h-eBa"/>
                                 </constraints>
@@ -62,7 +94,6 @@
                             </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VVR-QJ-jNG">
                                 <rect key="frame" x="0.0" y="94" width="393" height="42"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="ZSf-u5-KJ9"/>
                                 </constraints>
@@ -93,7 +124,6 @@
                             </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hyF-zq-sN8">
                                 <rect key="frame" x="0.0" y="136" width="393" height="633"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="B44-y0-FiZ">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -133,7 +163,7 @@
                             <constraint firstItem="53h-qm-nj3" firstAttribute="trailing" secondItem="uA9-CE-Zwk" secondAttribute="trailing" id="aEa-GJ-Fb9"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="house.circle.fill" catalog="system" selectedImage="house.circle.fill" id="bpw-sx-iu0"/>
+                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass.circle.fill" catalog="system" selectedImage="magnifyingglass.circle.fill" id="bpw-sx-iu0"/>
                     <connections>
                         <outlet property="iconsCollectionView" destination="hyF-zq-sN8" id="Thf-43-A1b"/>
                         <outlet property="searchBar" destination="uA9-CE-Zwk" id="rgu-EY-UaF"/>
@@ -154,8 +184,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="k5B-vU-PQ1" kind="relationship" relationship="viewControllers" id="dLY-YJ-Xrl"/>
                         <segue destination="HM0-3n-Yyb" kind="relationship" relationship="viewControllers" id="8nY-6x-JMb"/>
+                        <segue destination="k5B-vU-PQ1" kind="relationship" relationship="viewControllers" id="dLY-YJ-Xrl"/>
                         <segue destination="pQ0-7K-mqu" kind="relationship" relationship="viewControllers" id="ZIF-Jo-Zjb"/>
                     </connections>
                 </tabBarController>
