--- a/SDKVideoPlayer/Home.storyboard
+++ b/SDKVideoPlayer/Home.storyboard
@@ -24,7 +24,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ycj-HW-ihW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-459" y="826"/>
+            <point key="canvasLocation" x="-2286" y="664"/>
         </scene>
         <!--Home-->
         <scene sceneID="nFP-tq-jjo">
@@ -35,7 +35,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KAD-fE-Qc8">
-                                <rect key="frame" x="0.0" y="59" width="393" height="710"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="blR-Cn-44a">
                                     <size key="itemSize" width="128" height="128"/>
@@ -65,13 +65,14 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="house.circle.fill" catalog="system" selectedImage="house.circle.fill" id="ymc-of-57i"/>
+                    <navigationItem key="navigationItem" id="4B8-kv-ktg"/>
                     <connections>
                         <outlet property="collectionView" destination="KAD-fE-Qc8" id="wXF-MH-ZvA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G8T-DH-bct" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-106.10687022900763" y="156.33802816901408"/>
+            <point key="canvasLocation" x="-140" y="-702"/>
         </scene>
         <!--Search-->
         <scene sceneID="26A-jB-gQ3">
@@ -82,7 +83,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="uA9-CE-Zwk">
-                                <rect key="frame" x="0.0" y="50" width="393" height="44"/>
+                                <rect key="frame" x="0.0" y="94" width="393" height="44"/>
                                 <color key="backgroundColor" red="0.93333333333333335" green="0.93725490196078431" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="G0z-4h-eBa"/>
@@ -93,7 +94,7 @@
                                 </connections>
                             </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VVR-QJ-jNG">
-                                <rect key="frame" x="0.0" y="94" width="393" height="42"/>
+                                <rect key="frame" x="0.0" y="138" width="393" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="ZSf-u5-KJ9"/>
                                 </constraints>
@@ -123,7 +124,7 @@
                                 </cells>
                             </collectionView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hyF-zq-sN8">
-                                <rect key="frame" x="0.0" y="136" width="393" height="633"/>
+                                <rect key="frame" x="0.0" y="180" width="393" height="589"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="B44-y0-FiZ">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -164,6 +165,7 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass.circle.fill" catalog="system" selectedImage="magnifyingglass.circle.fill" id="bpw-sx-iu0"/>
+                    <navigationItem key="navigationItem" id="hW1-bP-jnl"/>
                     <connections>
                         <outlet property="iconsCollectionView" destination="hyF-zq-sN8" id="Thf-43-A1b"/>
                         <outlet property="searchBar" destination="uA9-CE-Zwk" id="rgu-EY-UaF"/>
@@ -172,26 +174,61 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GfZ-Is-l8d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-458.77862595419845" y="-496.47887323943667"/>
+            <point key="canvasLocation" x="488" y="6"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ESd-bC-644">
             <objects>
                 <tabBarController id="hSv-s3-14r" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="gY4-Kx-GLX"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UaW-4a-tch">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="HM0-3n-Yyb" kind="relationship" relationship="viewControllers" id="8nY-6x-JMb"/>
-                        <segue destination="k5B-vU-PQ1" kind="relationship" relationship="viewControllers" id="dLY-YJ-Xrl"/>
-                        <segue destination="pQ0-7K-mqu" kind="relationship" relationship="viewControllers" id="ZIF-Jo-Zjb"/>
+                        <segue destination="spA-jk-kzU" kind="relationship" relationship="viewControllers" id="6lu-0M-7Kg"/>
+                        <segue destination="fvu-YJ-NuX" kind="relationship" relationship="viewControllers" id="oL9-Jl-HGr"/>
+                        <segue destination="pQ0-7K-mqu" kind="relationship" relationship="viewControllers" id="8EK-Pf-3Qi"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mPd-iB-D0w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1364" y="-192"/>
+            <point key="canvasLocation" x="-2257" y="-198"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Kee-Sv-QIM">
+            <objects>
+                <navigationController id="fvu-YJ-NuX" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Ujw-82-fH9"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bPH-2c-ijz">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="k5B-vU-PQ1" kind="relationship" relationship="rootViewController" id="Pjr-7Q-r4u"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AcI-1R-ese" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-431" y="6"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="9TU-pi-IUp">
+            <objects>
+                <navigationController id="spA-jk-kzU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="qcO-BB-627"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XEn-BS-YZ5">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="HM0-3n-Yyb" kind="relationship" relationship="rootViewController" id="8Sd-Nn-17L"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ft9-vo-Lm6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1056" y="-683"/>
         </scene>
     </scenes>
     <resources>
