--- a/SDKVideoPlayer/Base.lproj/Home.storyboard
+++ b/SDKVideoPlayer/Base.lproj/Home.storyboard
@@ -333,19 +333,19 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="clz-A2-PNz">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="520.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="519"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v7z-iQ-jkJ" userLabel="Poster Container View">
                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ec4-5o-3kz">
-                                                        <rect key="frame" x="164.66666666666666" y="72.666666666666657" width="64" height="55"/>
+                                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ec4-5o-3kz">
+                                                        <rect key="frame" x="169" y="72.666666666666657" width="55" height="55"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="64" id="Ne7-k3-IGM"/>
+                                                            <constraint firstAttribute="width" constant="55" id="Ne7-k3-IGM"/>
                                                             <constraint firstAttribute="height" constant="55" id="yhH-uc-wuE"/>
                                                         </constraints>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                        <state key="normal" image="PlayVideoGray"/>
+                                                        <state key="normal" image="Play"/>
                                                         <connections>
                                                             <action selector="playaction:" destination="S6F-E5-Nz7" eventType="touchUpInside" id="dyA-Il-AFI"/>
                                                         </connections>
@@ -359,7 +359,7 @@
                                                     <constraint firstItem="Ec4-5o-3kz" firstAttribute="centerY" secondItem="jeX-i6-Bco" secondAttribute="centerY" id="YSa-Qa-gpW"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="Q9v-2G-DSM" userLabel="Title Container View">
+                                            <view hidden="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="Q9v-2G-DSM" userLabel="Title Container View">
                                                 <rect key="frame" x="0.0" y="200" width="393" height="0.0"/>
                                                 <viewLayoutGuide key="safeArea" id="Xs9-OR-AL4"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -374,7 +374,7 @@
                                                     <constraint firstAttribute="height" constant="1" id="wYt-pg-AwQ"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRJ-pd-lhA" userLabel="Options View">
+                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRJ-pd-lhA" userLabel="Options View">
                                                 <rect key="frame" x="0.0" y="200" width="393" height="0.33333333333334281"/>
                                                 <color key="backgroundColor" systemColor="systemGrayColor"/>
                                                 <constraints>
@@ -411,15 +411,15 @@
                                                     </mask>
                                                 </variation>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t4E-DH-kcF" userLabel="Separator View">
-                                                <rect key="frame" x="0.0" y="200.33333333333331" width="393" height="1"/>
+                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t4E-DH-kcF" userLabel="Separator View">
+                                                <rect key="frame" x="0.0" y="200" width="393" height="1"/>
                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="1" id="k77-sn-KzA"/>
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="VI3-92-IFD" userLabel="Info Stack View">
-                                                <rect key="frame" x="0.0" y="201.33333333333331" width="393" height="83"/>
+                                                <rect key="frame" x="0.0" y="200" width="393" height="83"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K4u-EF-Ynq" userLabel="Genre View">
                                                         <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="83"/>
@@ -483,14 +483,14 @@
                                                 <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
                                             </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vQN-fC-GL7" userLabel="Separator View">
-                                                <rect key="frame" x="0.0" y="284.33333333333331" width="393" height="1"/>
+                                                <rect key="frame" x="0.0" y="283" width="393" height="1"/>
                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="1" id="vOP-Wc-CNN"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GXb-rA-lR0" userLabel="Overview View">
-                                                <rect key="frame" x="0.0" y="285.33333333333331" width="393" height="234.99999999999994"/>
+                                                <rect key="frame" x="0.0" y="284" width="393" height="235"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yjh-aU-ftM" userLabel="Overview Label">
                                                         <rect key="frame" x="16" y="16" width="361" height="203"/>
@@ -570,7 +570,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="PlayVideoGray" width="33" height="33"/>
+        <image name="Play" width="512" height="512"/>
         <image name="home1" width="24" height="24"/>
         <image name="placeholder" width="80" height="60"/>
         <image name="play.circle.fill" catalog="system" width="128" height="123"/>
